# EduRAG

./: CHANGELOG.md  agent.md  docker-compose.yml
agentic_crawler/: __init__.py  orchestrator.py
ai-search/: README.md  config.py  create_agent.py  file_manager.py  main.py  pyproject.toml
ai-search-web/: .gitignore  README.md  main.py  pyproject.toml
ai-search/ai_search/: __init__.py
ai-search/ai_search/agents/: builder.py
ai-search/ai_search/cli/: __init__.py  app.py
ai-search/ai_search/config/: __init__.py  settings.py
ai-search/ai_search/core/: __init__.py  analysis_engine.py  plan_parser.py
ai-search/ai_search/jobs/: __init__.py  llm_judge.py
ai-search/ai_search/service/: __init__.py  api.py
ai-search/ai_search/storage/: __init__.py  elasticsearch_client.py  report_manager.py
ai-search/ai_search/tools/: __init__.py  crossref_tool.py  openalex_tool.py  qdrant_rag.py  semantic_scholar.py
ai-search/ai_search/web/: __init__.py  app.py
ai-search/reports/: 51b2fec2-5d4c-4267-8a33-9e690eb768f3.md  b4fd3c28-986e-11f0-a14a-e0d362593fa4.md  bc6d40bd-975b-11f0-a94f-e0d362593fa4.md  d22fab20-945c-11f0-8353-e0d362593fa4.md  e1ce207d-986d-11f0-aa63-e0d362593fa4.md
ai-search/tests/: test_api.py  test_cli.py  test_llm_judge.py
charts-workflow/: .gitignore  CHANGELOG.md  config.py  create_agent.py  file_manager.py  main.py  pyproject.toml
data-pipeline/: .env.example
langchain/: __init__.py
langchain_core/: __init__.py
miner/: README.md  __init__.py  agent.py  db.py  docmodel.py  gemini.py  main.py  pyproject.toml  search.py  vector_db.py
(+71 files in other folders)
