[project]
name = "miner"
version = "0.1.0"
description = "RAG repository scaffolding toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.9.0",
    "deep-translator>=1.11.4",
    "tavily-python>=0.7.12",
    "google-generativeai>=0.7.2",
    "langchain>=0.2.0",
    "langchain-google-genai>=0.1.5",
    "psycopg[binary]>=3.1",
]
